# jle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Matmakefile  README.md  editor.cpp  engine.cpp  engine_structure.uml  hexablo.cpp  hexablo.sln
Pong/: AIRacketController.cpp  (+15 more)
engine/: Animation.cpp  Animation.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera2Dold.cpp  Camera2Dold.h  ConsoleEditorWindow.cpp  ConsoleEditorWindow.h  DebugRenderer.cpp  DebugRenderer.h  EditorBackgroundImage.cpp  EditorBackgroundImage.h  EditorContentBrowser.cpp  EditorContentBrowser.h  EditorGameControllerWidget.cpp  EditorGameControllerWidget.h  EditorGameControllerWindow.cpp  EditorGameControllerWindow.h  EditorJsonToImgui.cpp  EditorJsonToImgui.h  EditorProfilerWindow.cpp  EditorProfilerWindow.h  EditorResourceViewer.cpp  EditorResourceViewer.h  EditorSceneObjectsWindow.cpp  EditorSceneObjectsWindow.h  EditorWindowsPanel.cpp  EditorWindowsPanel.h  Engine.cpp  Engine.h  EngineSettingsWindow.cpp  EngineSettingsWindow.h  EngineStatus.cpp  EngineStatus.h  FileLoadInterface.h  FrameBuffer_OpenGL.cpp  FrameBuffer_OpenGL.h  Framebuffer.cpp  Framebuffer.h  (+394 more)
engine/EditorResources/gizmos/: selectedObject.mat
engine/EditorResources/icons/: LICENCE
engine/EditorResources/scripts/: editor.lua  pretty_table.lua
engine/EngineResources/models/: crash_cube.fbx  cube.fbx
engine/EngineResources/scripts/: engine.lua  globals.lua
engine/EngineResources/shaders/: debugDepthQuad.glsl  defaultMesh.glsl  defaultMesh.sh  depthDebug.sh  exampleCube.glsl  exampleCube.sh  font.glsl  lines.glsl  lines.sh  missingMaterialShader.glsl  picking.glsl  picking.sh  quad.frag  quad.glsl  quadHeightmapInstanced.glsl  quadHeightmapInstancedSimple.glsl  quadInstanced.frag  quadInstanced.glsl  quadInstanced.vert  quadScreen.frag  quadScreen.glsl  quadScreen.sh  quadScreen.vert  shadowMapping.glsl  shadowMapping.sh  shadowMappingPoint.glsl  shadowMappingPoint.sh  skybox.glsl  skybox.sh
engine/EngineResources/skybox/: default.skyb  gray.skyb
engine/RmlUiImplementation/: RmlUi_Backend.h  RmlUi_Backend_GLFW_GL3.cpp  RmlUi_Platform_GLFW.cpp  RmlUi_Platform_GLFW.h  RmlUi_Renderer_GL3.cpp
engine/cmake/: game.cmake  game1.cmake  game2.cmake
engine/core/: CMakeLists.txt  jleAssert.h  jleCamera.cpp  jleCommandArguments.cpp  jleCommandArguments.h  jleCompileHelper.h  jleComponent.cpp  jleDynamicLogAppender.h  jleFileWatcher.cpp  jleFileWatcher.h  jleImage.cpp  jleImageFlipped.cpp  jleImageFlipped.h  jleNew.cpp  jleObject.cpp  jleObject.h  jleObject.inl  jlePath.cpp  jlePath.h  jlePathDefines.h  jleProfiler.h  jleRGB.h  jleResource.cpp  jleResource.h  jleResourceIndexer.cpp  jleResourceIndexer.h  jleResourceInterface.cpp  jleResourceInterface.h  jleResourceRef.h  jleResourceRef.inl  jleScene.cpp  jleScene.h  jleScene.inl  jleSceneClient.cpp  jleSceneClient.h  jleSceneNetworked.cpp  jleSceneServer.cpp  jleSceneServer.h  jleSerializedResource.h  jleTimerManager.cpp  (+5 more)
engine/editor/: jleConsoleEditorWindow.cpp  jleConsoleEditorWindow.h  jleEditor.cpp  jleEditor.h  jleEditor3DImportWindow.cpp  jleEditor3DImportWindow.h  jleEditorBuild.cpp  jleEditorBuild.h  jleEditorContentBrowser.cpp  jleEditorContentBrowser.h  jleEditorFrameGraphWindow.cpp  jleEditorFrameGraphWindow.h  jleEditorGameControllerWidget.cpp  jleEditorGameControllerWidget.h  jleEditorGizmos.cpp  jleEditorGizmos.h  jleEditorImGuiWindowInterface.h  jleEditorJsonToImgui.h  jleEditorNotifications.cpp  jleEditorNotifications.h  jleEditorProfilerWindow.cpp  jleEditorProfilerWindow.h  jleEditorResourceEdit.cpp  jleEditorResourceEdit.h  jleEditorResourceViewer.cpp  jleEditorResourceViewer.h  jleEditorSaveState.cpp  jleEditorSaveState.h  jleEditorSceneObjectsWindow.cpp  jleEditorSceneObjectsWindow.h  jleEditorSettings.h  jleEditorSettingsWindow.cpp  jleEditorSettingsWindow.h  jleEditorTextEdit.cpp  jleEditorTextEdit.h  jleEditorWindowsPanel.cpp  jleEditorWindowsPanel.h  jleGameEditorWindow.cpp  jleGameEditorWindow.h  jleImGuiArchive.h  (+10 more)
engine/jleSTL/: jleAllocator.h  jleAllocatorMalloc.h  jleAny.h  jleArray.h  jleBitset.h  jleFixedAllocator.h  jleFixedHashMap.h  jleFixedHashSet.h  jleFixedMap.h  jleFixedSet.h  jleFixedString.h  jleFixedSubstring.h  jleHashMap.h  jleIntrusiveHashMap.h  jleIntrusiveList.h  jleList.h  jleMap.h  jlePriorityQueue.h  jleSafePtr.h  jleSegmentedVector.h  jleSet.h  jleSharedPtr.h  jleSlist.h  jleSpan.h  jleStack.h  jleString.h  jleStringMap.h  jleStringView.h  jleTuple.h  jleUnorderedMap.h  jleVariant.h  jleVectorMap.h  jleVectorMultiset.h
engine/modules/: CMakeLists.txt  jleEditorModulesContext.cpp  jleEditorModulesContext.h  jleEngineModulesContext.cpp  jleEngineModulesContext.h  jleModules.cpp  jleModules.h
engine/serialization/: jleBinaryArchive.h  jleExternalSerialization.h  jleJSONArchive.h  jleSerialization.h
engine/shaders/: quadTexture.frag  quadTexture.vert
gametemplate/: CMakeLists.txt  GameTemplate.cpp  GameTemplate.h  main.cpp
gametemplate/GameResources/: imgui.ini  jle_es_config.json  jle_gs_config.json
hexablo/: Animation.cpp  Animation.h  CMakeLists.txt  GameObject.cpp  GameObject.h  HexMap.cpp  HexMap.h  Hexablo.cpp  Hexablo.h  Hexagon.cpp  Hexagon.h  ObjectManager.cpp  ObjectManager.h  Sprite.cpp  Sprite.h  hexHelperFunctions.cpp  hexHelperFunctions.h  hexHexagonFunctions.cpp  hexHexagonFunctions.h  hexHexagonItem.cpp  hexHexagonItem.h  hexNetScene.cpp  hexNetScene.h  hexablo.vcxproj  hexablo.vcxproj.filters  imgui.ini  jle_log.1.txt  jle_log.2.txt  jle_log.3.txt  jle_log.4.txt  jle_log.txt  main.cpp  oCharacter.cpp  oCharacter.h  oCharacterHealthBar.cpp  oCharacterHealthBar.h  oFireball.cpp  oFireball.h  oMonster.cpp  oMonster.h  (+4 more)
hexablo/GameAssets/: HexagonDiabloConcept.aseprite
hexablo/GameResources/: FullScene.aseprite  character_anim_attack.aseprite  character_anim_idle.aseprite  character_anim_idle.json  character_animation.aseprite  hexablo-logo.aseprite  hp.json  jle_es_config.json  jle_gs_config.json  worldHexTiles.aseprite  worldHexTiles.json
hexablo/Server/: package-lock.json  package.json  server.js
(+286 files in other folders)
